Closed
Bug 704478
Opened 14 years ago
Closed 14 years ago
JS Shell Workers broken (Assertion failure: rt->onOwnerThread(), at jsapi.cpp:6326)
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
mozilla11
People
(Reporter: decoder, Assigned: luke)
Details
(Keywords: assertion, testcase)
Attachments
(1 file)
|
2.05 KB,
patch
|
jorendorff
:
review+
|
Details | Diff | Splinter Review |
I just wanted to give the workers in JS shell a try (mozilla-central revision 5ebeef1eabcb) but I only get this:
js> new Worker()
Assertion failure: rt->onOwnerThread(), at mozilla-central/js/src/jsapi.cpp:6326
I've built this shell with --enable-threadsafe and system NSPR.
| Reporter | ||
Comment 1•14 years ago
|
||
The first bad revision is:
changeset: 79916:31d13586087f
user: Luke Wagner
date: Fri Jul 01 14:11:31 2011 -0700
summary: Bug 650411 - assert in debug/release builds that JSRuntime is only used in a single-threaded manner (r=jorendorff,sr=dmandelin)
| Assignee | ||
Comment 2•14 years ago
|
||
Oops, I added a new JS_AbortIfWrongThread (under JS_SetContextThread) and forgot to run shell workers.
Updated•14 years ago
|
Attachment #576167 -
Flags: review?(jorendorff) → review+
| Assignee | ||
Comment 4•14 years ago
|
||
Target Milestone: --- → mozilla11
Comment 5•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•