Bug 704478 - Fix single-threaded runtime assertions in shell workers (r=jorendorff)

--HG--
extra : rebase_source : 13deb300ee2aa3d5518549d4f296b276a0da4e42