js/src/shell/jsworkers.cpp
@@ -1137,12 +1137,12 @@ Worker::processOneEvent()
         event = current = events.pop();
     }
 
+    JS_SetRuntimeThread(runtime);
     JS_SetContextThread(context);
     JS_SetNativeStackQuota(context, gMaxStackSize);
 
     Event::Result result;
     {
-        JSAutoSetRuntimeThread asrt(JS_GetRuntime(context));
         JSAutoRequest ar(context);
         result = event->process(context);
     }
@@ -1159,7 +1159,6 @@ Worker::processOneEvent()
         }
     }
     if (result == Event::fail && !checkTermination()) {
-        JSAutoSetRuntimeThread asrt(JS_GetRuntime(context));
         JSAutoRequest ar(context);
         Event *err = ErrorEvent::create(context, this);
         if (err && !parent->post(err)) {
@@ -1175,6 +1174,7 @@ Worker::processOneEvent()
     if (event)
         event->destroy(context);
     JS_ClearContextThread(context);
+    JS_ClearRuntimeThread(runtime);
 
     {
         AutoLock hold2(lock);
